osyka_scheme: improve adaptive schemes

--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
 		"osyka_scheme_gen": "./dist/osyka_scheme_gen.js"
 	},
 	"scripts": {
-		"build": "rm -rf dist && tsc --project tsconfig.build.json && cp src/*.styl dist",
+		"build": "rm -rf dist && tsc --project tsconfig.build.json && pnpm baseline_gen && cp src/*.{styl,css} dist",
+		"baseline_gen": "pnpm osyka_scheme_gen tonal_spot '#45b1e8' src/osyka_scheme_baseline",
 		"prepublish": "npm version prerelease && pnpm build"
 	},
 	"dependencies": {
